--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Etoiles</title>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
