--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-<p>
+<p id="explanation">
 This page help you to simulate a fundraising for your github project based on popular projects and your Github stats.
-<br />
+<br /><br />
 <b>Please don't take this seriously.</b>
 </p>
 <div id="form">
@@ -23,5 +23,15 @@ This page help you to simulate a fundraising for your github project based on po
 </div>
 <div id="stats">
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70557-11', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
